fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-012-92c671c0e8.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="#F00" boxSize="24px" />"
