fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-013-351e69a13b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="$primaryColor" h="50px" w="100px" />"
