fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-014-828c466260.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Box
  bg="#F00"
  boxSize="24px"
  maskImage="url(/icons/MaskIcon.svg)"
  maskPos="center"
  maskRepeat="no-repeat"
  maskSize="contain"
/>"
