fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-016-3f1fb1569b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Image boxSize="24px" src="/icons/MixedIcon.svg" />"
