fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-017-44cff97cec.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Image boxSize="24px" src="/icons/GradientIcon.svg" />"
