fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-020-a9d569be7a.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Image boxSize="24px" src="/icons/NestedMultiColorIcon.svg" />"
