fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-021-6cae93b843.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Box boxSize="100%" pos="relative">
  <Box boxSize="100%" left="0px" pos="absolute" top="0px" />
</Box>"
