fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-022-8dce1fe15f.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Flex boxSize="100%" pos="relative">
  <Box h="100%" pos="absolute" right="0px" top="50px" />
</Flex>"
